# certifai

./: .certifai.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  certifai.bundle  noxfile.py  pyproject.toml
.github/workflows/: certifai.yml
certifai/: __init__.py  __main__.py  audit.py  certify.py  checks.py  cli.py  decorators.py  digest.py  enforce.py  finalize.py  history.py  hooks.py  metadata.py  models.py  parser.py  policy.py  provenance.py  publishing.py  registry.py  report.py
certifai/integrations/: github.py  security.py
certifai/utils/: __init__.py  git.py  logging.py
docs/: index.md  llm_review_brief.md
examples/demo_project/: .certifai.yml  README.md  pyproject.toml
examples/demo_project/src/demo_project/: __init__.py  analytics.py  preprocessing.py
reports/: evaluation.md
tests/: test_agent_integration.py  test_audit.py  test_checks.py  test_cli.py  test_enforce.py  test_finalization.py  test_models.py  test_parser.py  test_policy.py  test_pr_integration.py  test_provenance.py  test_publishing.py  test_security_integration.py
